@startuml
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 8
skinparam defaultFontName Arial
skinparam ArrowColor #344054
title Class structure — Run generation safely

class CliExceptionPolicy {
  +ExecuteAsync(operation, error, diagnostic, cancellationToken): Task<int>
}
interface ITransactionalGenerationOutput {
  +CommitAsync(target, force, generate, cancellationToken): Task<GenerationResult>
}
class TransactionalGenerationOutput
class SafeFileWriter {
  {static} +WriteAsync(root, relativePath, content, cancellationToken): Task
}
interface IProcessRunner {
  +RunAsync(request: ProcessRequest, cancellationToken): Task<ProcessResult>
}
class ProcessRunner
class ProcessRequest {
  +FileName: string
  +Arguments: IReadOnlyList<string>
  +WorkingDirectory: string?
}
class GenerationResult {
  +TargetPath: string
  +Artifacts: IReadOnlyList<string>
  +ReplacedExistingOutput: bool
  +Warnings: IReadOnlyList<string>
}

ITransactionalGenerationOutput <|.. TransactionalGenerationOutput
IProcessRunner <|.. ProcessRunner
TransactionalGenerationOutput ..> SafeFileWriter : supplies stage to renderer using
TransactionalGenerationOutput ..> GenerationResult : creates
ProcessRunner --> ProcessRequest
CliExceptionPolicy ..> GenerationResult : reports success
@enduml
